# primary_hr_brca_io_treated_genomic_analysis

./: INSTALL.R  LICENSE  Makefile  README.md  conda-env.yml  data  pyproject.toml
notebooks/: 0_Mutation_Signature_Comparison.ipynb  1_Genomic landscape of the trial population.ipynb  2_Transcriptomic_landscape of the trial population.ipynb
report/table/: Table_1_trial_16-466_WES_Data.xlsx  Table_2_trial_16-466_RNA-Seq_Data.xlsx
reports/enrichr_kegg/{comparison}_{method}_{test_name}/: MSigDB_Hallmark_2020.Human.enrichr.reports.txt
src/: settings.py
src/Rscripts/: DEGs.R  deconstructSig.R  pam50.R
src/dataset/: __init__.py  _dataset.py  rnaDataset.py  wesDataset.py
src/models/: downstream_features.py  landscape.py  mutation.py  rna.py  utils.py
src/visualization/: paper.mplstyle  plot.py
